[hotfix] Clean up warnings and unnecessary code in tests